# HSPiPy

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
doc/: HSP.md  HSPEstimator.md  discovery.md
docs/: HSP.md  HSPEstimator.md  _congfig.yml  discovery.md  index.md
examples/: HSP_dataset.csv  hsp_example.csv
hspipy/: Aroma Chemicals.hsd  Bitumen.hsdx  __init__.py  core.py  db.csv  hsp.py  hsp_core.py  hsp_example copy.csv  hsp_example2.csv  hsp_example3.csv  readers.py
hspipy/core/: __init__.py  hsp_estimator.py  loss.py  utils.py
hspipy/src/: hsp.py  hspipy.py
hspipy/utils/: __init__.py  discovery.py
hspy/: __init__.py
hspy/src/: hspy.py
tests/: test_common.py  test_discovery.py  test_hsp.py  test_readers.py
