[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HSPiPy"
dynamic = ["version"]
description = "Hansen Solubility Parameters in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alejandro Gutierrez", email = "agutierrez@g-npd.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.0.0",
    "pandas>=1.0.0",
    "matplotlib>=3.0.0", 
    "numpy>=1.18.0",
    "scikit-learn>=1.0.0",
]
keywords = ["hansen", "solubility", "parameters", "chemistry", "solvents"]

[project.urls]
Homepage = "https://github.com/Gnpd/HSPiPy"
Repository = "https://github.com/Gnpd/HSPiPy"
Issues = "https://github.com/Gnpd/HSPiPy/issues"

[tool.setuptools]
packages = ["hspipy"]

[tool.setuptools.package-data]
hspipy = ["*.csv", "*.png"]

[tool.setuptools.dynamic]
version = {attr = "hspipy.__version__"}